add animate on scroll

--- a/app/html/index.pug
+++ b/app/html/index.pug
@@ -9,7 +9,7 @@ include block_html/_include.pug
 	// В обертке .b-wrap-cont глобально подлючен шрифт "PT Sans" в файлах он не подлючается, для работы бери все что лежит внутри этого блока
 	.b-section
 		.b-main-cont
-			.b-about
+			.b-about(data-aos="fade" data-aos-delay="400" data-aos-duration="1400")
 				a(href="#" style="background-image:url('img/item-1.jpg')").b-about__el
 					.b-filter
 					.b-about__el-info
@@ -26,7 +26,7 @@ include block_html/_include.pug
 					.b-filter
 					.b-about__el-info
 						span Настраиваем обмен 1С и CRM
-	.b-order-wrap
+	.b-order-wrap(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000")
 		.b-main-cont
 			.b-title.b-title--white.b-title--sm Нужна помощь в подборе CRM?
 			.b-order
@@ -41,8 +41,8 @@ include block_html/_include.pug
 					input(type="submit" value="Отправить" class="b-btn--md b-btn--mark")
 	.b-section
 		.b-main-cont
-			.b-title Возможности для клиента
-			.b-advant
+			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Возможности для клиента
+			.b-advant(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
 				.b-advant__el
 					.b-advant__el-img
 						.b-advant__el-icon
@@ -87,8 +87,8 @@ include block_html/_include.pug
 					.b-advant__el-title Акции
 	.b-section.b-section--gray
 		.b-main-cont
-			.b-title Наши продукты
-			.b-slider-wrap.b-slider-wrap--simple
+			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Наши продукты
+			.b-slider-wrap.b-slider-wrap--simple(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
 				.b-slider-control.b-slider-control--left
 					img(src="img/arrow-left.svg", alt="")
 				.b-slider-control.b-slider-control--right
@@ -117,8 +117,8 @@ include block_html/_include.pug
 									a(href="#").b-slider-product__el-get Заказать
 	.b-section
 		.b-main-cont
-			.b-title Компания «BusinessUpgrade» — <br> это команда профессионалов своего дела!
-			.b-team
+			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Компания «BusinessUpgrade» — <br> это команда профессионалов своего дела!
+			.b-team(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
 				.b-team__el
 					.b-team__el-img
 						img(src="img/analisis.svg", alt="")
@@ -146,8 +146,8 @@ include block_html/_include.pug
 
 	.b-section.b-section--gray
 		.b-main-cont
-			.b-title Наши клиенты
-			.b-slider-wrap.b-slider-wrap--simple
+			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Наши клиенты
+			.b-slider-wrap.b-slider-wrap--simple(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
 				.b-slider-control.b-slider-control--left
 					img(src="img/arrow-left.svg", alt="")
 				.b-slider-control.b-slider-control--right
@@ -164,8 +164,8 @@ include block_html/_include.pug
 								.b-slider-client__el-info Герой сегодняшней подборки - американский музыкант сицилийского происхождения Салли Эрна (р. 1968 г.), вокалист и мультиинструменталист (гитарист, клавишник, ударник). Наиболее известен широкой публике как бессменный лидер группы Godsmack. Подборки с творчеством данного коллектива я ранее уже выкладывал.
 	.b-section
 		.b-main-cont
-			.b-title Что мы вам готовы дать
-			.provide
+			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Что мы вам готовы дать
+			.provide(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
 				.provide__el
 					.provide__el-img
 						img(src="img/control.png", alt="")
