--- a/app/html/block_html/_script.pug
+++ b/app/html/block_html/_script.pug
@@ -1,6 +1,7 @@
 script(src='./js/jquery.js')
 //build:js ./js/combined.js
 script(src='bower/slick-carousel/slick/slick.js')
+script(src="bower/aos/dist/aos.js")
 // endbuild
 script(src="./js/script.js")
 
