fix animation type

--- a/app/html/index.pug
+++ b/app/html/index.pug
@@ -26,7 +26,7 @@ include block_html/_include.pug
 					.b-filter
 					.b-about__el-info
 						span Настраиваем обмен 1С и CRM
-	.b-order-wrap(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000")
+	.b-order-wrap
 		.b-main-cont
 			.b-title.b-title--white.b-title--sm Нужна помощь в подборе CRM?
 			.b-order
@@ -87,8 +87,8 @@ include block_html/_include.pug
 					.b-advant__el-title Акции
 	.b-section.b-section--gray
 		.b-main-cont
-			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Наши продукты
-			.b-slider-wrap.b-slider-wrap--simple(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
+			.b-title Наши продукты
+			.b-slider-wrap.b-slider-wrap--simple
 				.b-slider-control.b-slider-control--left
 					img(src="img/arrow-left.svg", alt="")
 				.b-slider-control.b-slider-control--right
@@ -146,8 +146,8 @@ include block_html/_include.pug
 
 	.b-section.b-section--gray
 		.b-main-cont
-			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Наши клиенты
-			.b-slider-wrap.b-slider-wrap--simple(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
+			.b-title Наши клиенты
+			.b-slider-wrap.b-slider-wrap--simple
 				.b-slider-control.b-slider-control--left
 					img(src="img/arrow-left.svg", alt="")
 				.b-slider-control.b-slider-control--right
@@ -164,8 +164,8 @@ include block_html/_include.pug
 								.b-slider-client__el-info Герой сегодняшней подборки - американский музыкант сицилийского происхождения Салли Эрна (р. 1968 г.), вокалист и мультиинструменталист (гитарист, клавишник, ударник). Наиболее известен широкой публике как бессменный лидер группы Godsmack. Подборки с творчеством данного коллектива я ранее уже выкладывал.
 	.b-section
 		.b-main-cont
-			.b-title(data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000") Что мы вам готовы дать
-			.provide(data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500")
+			.b-title Что мы вам готовы дать
+			.provide
 				.provide__el
 					.provide__el-img
 						img(src="img/control.png", alt="")
