--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -6,9 +6,10 @@
 
 // constant
 $mark = #0082ed
+$border-color = gray
 .b-input
 	padding 10px 20px
-	border 1px solid $border-color
+	border 1px solid #ececec
 	resize: none
 	outline: 0 !important
 	display block!important
@@ -101,23 +102,18 @@ $mark = #0082ed
 	grid-gap 10px
 	grid-template-columns: repeat(2, 1fr)
 .b-about__el
-	+below(1024px)
-		.b-filter
-			opacity: 0
-		.b-about__el-info
-			transform translateY(0px)
-			opacity: 1
-			span
-				background: #01395cc4
+	.b-filter
+		opacity: 0
+	.b-about__el-info
+		transform translateY(0px)
+		opacity: 1
+		span
+			background: #01395cc4
 	bg-full()
 	padding: 27% 10%
 	position relative
-	&:hover
-		.b-filter
-			opacity: .25
-		.b-about__el-info
-			transform translateY(0px)
-			opacity: 1
+
+
 .b-filter
 	position absolute
 	top 0
