--- a/app/html/index.pug
+++ b/app/html/index.pug
@@ -7,6 +7,7 @@ include block_html/_include.pug
 	// В скриптах подлючается jquery если в проекте он уже есть не подлючай
 	// Чтобы не было конфликтов стилей у блоков будет префикс "b-"
 	// В обертке .b-wrap-cont глобально подлючен шрифт "PT Sans" в файлах он не подлючается, для работы бери все что лежит внутри этого блока
+	// !!! NOTE !!! Если будут вопросы пиши contact mail:kuznecovs45@gmail.com skype:an_kuznetcov
 	.b-section
 		.b-main-cont
 			.b-about(data-aos="fade" data-aos-delay="400" data-aos-duration="1400")
